# plotly-dashboard

./: pyproject.toml
dash_app/: est_power_production_2022-2023.csv  main.py  nps_2022_2023.csv  todo.py
dash_app/core/: __init__.py  config.py  dataframes.py
dash_app/data/text_data/: total_power_prod.py
dash_app/pages/area_and_line_plots/: callback_funcs.py  layout.py
dash_app/pages/box_plots/: callback_func.py  layout.py
dash_app/pages/daily_selector/: callback_func.py  layout.py
dash_app/pages/heatmap/: callback_func.py  layout.py
dash_app/pages/line_plots_selector/: callback_func.py  layout.py
dash_app/pages/pie_chart/: callback.py  layout.py  text.py
dash_app/pages/test/: callback_func.py
dash_app/text_data/: home_page_text.py
